# Device_Inventory

./: .gitignore  README.md  pyproject.toml
src/models/: __init__.py  device.py
src/repositories/: __init__.py  base.py  exceptions.py  memory.py
tests/unit/: test_models.py  test_repository_memory.py
